# university-bachelors-thesis

./: .gitignore  README.md  pyproject.toml
docs/: experiments.md  modeling_guide.md  reproducibility.md
obsidian/: 00-dashboard.md  README.md
obsidian/.obsidian/: core-plugins.json  templates.json
obsidian/01-maps/: literature-tracker.md  repository-map.md  sync-workflow.md
obsidian/02-database/commands/: grid-search.md  run.md  scaling.md  sequential.md
obsidian/02-database/datasets/: breast-cancer.md  csv.md  digits.md  iris.md  wine.md
obsidian/02-database/docs/: experiment-cookbook.md  modeling-guide.md  reproducibility-notes.md
obsidian/02-database/literature/: huang-2006-extreme-learning-machine-theory-and-applications.md  huang-2012-elm-regression-and-multiclass-classification.md  huang-2014-insight-into-extreme-learning-machines.md  huang-et-al-2015-trends-in-extreme-learning-machines-review.md  liang-2006-online-sequential-learning-algorithm.md  masana-et-al-2023-class-incremental-learning-survey.md
obsidian/02-database/models/: elm.md  logistic-regression.md  mlp.md  os-elm.md
obsidian/03-templates/: experiment-note.md  literature-note.md
scripts/: obsidian_sync_on_save.sh
src/thesis_elm/: __init__.py  __main__.py  cli.py  data.py  experiments.py  utils.py
src/thesis_elm/models/: __init__.py  base.py  elm.py  logistic_regression.py  mlp.py  os_elm.py
tests/: conftest.py  test_cli.py  test_models.py  test_results.py
